remove getLast since it's JDK 21